--- a/packages/keeper/package.json
+++ b/packages/keeper/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "minter",
+  "name": "keeper",
   "version": "0.0.1",
   "description": "Ethernauts server that reacts to mint events processing and uploading assets",
   "main": "index.js",
   "private": true,
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/ethernautdao/ethernauts/issues"
   },
-  "homepage": "https://github.com/ethernautdao/ethernauts#readme"
+  "homepage": "https://github.com/ethernautdao/ethernauts#readme",
+  "dependencies": {
+    "hardhat": "2.6.6"
+  }
 }
